11 Better Img Up

--- a/Anime.css
+++ b/Anime.css
@@ -8111,7 +8111,7 @@ simple rule of add = #more {background-image: url();}
 #more28843 {background-image: url(http://cdn.myanimelist.net/images/anime/13/69661.jpg);}
 #more28841 {background-image: url(http://cdn.myanimelist.net/images/anime/9/69607.jpg);}
 #more28835 {background-image: url(http://cdn.myanimelist.net/images/anime/9/72297.jpg);}
-#more28833 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/77399.webp);}
+#more28833 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83740l.jpg);}
 #more28831 {background-image: url(http://cdn.myanimelist.net/images/anime/10/69593.jpg);}
 #more28829 {background-image: url(http://cdn.myanimelist.net/images/anime/10/69585.jpg);}
 #more28827 {background-image: url(http://cdn.myanimelist.net/images/anime/2/69583.jpg);}
@@ -10549,7 +10549,7 @@ simple rule of add = #more {background-image: url();}
 #more31229 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/80953.webp);}
 #more31374 {background-image: url(http://cdn.myanimelist.net/images/anime/3/75467.jpg);}
 #more30363 {background-image: url(http://cdn.myanimelist.net/images/anime/12/76476l.jpg);}
-#more30365 {background-image: url(http://cdn.myanimelist.net/images/anime/5/74864.jpg);}
+#more30365 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/81185.jpg);}
 #more31380 {background-image: url(http://cdn.myanimelist.net/images/anime/13/76320.jpg);}
 #more30901 {background-image: url(http://cdn.myanimelist.net/images/anime/8/75968.jpg);}
 #more31439 {background-image: url(http://cdn.myanimelist.net/images/anime/7/78548.jpg);}
@@ -10570,7 +10570,7 @@ simple rule of add = #more {background-image: url();}
 #more31704 {background-image: url(http://cdn.myanimelist.net/images/anime/8/76392l.jpg);}
 #more31798 {background-image: url(http://cdn.myanimelist.net/images/anime/10/76635l.jpg);}
 #more31764 {background-image: url(http://cdn.myanimelist.net/images/anime/4/78934.jpg);}
-#more30727 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/83311.webp);}
+#more30727 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/83724.jpg);}
 #more30709 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/81250.webp);}
 #more30419 {background-image: url(http://cdn.myanimelist.net/images/anime/5/76402.jpg);}
 #more30344 {background-image: url(http://cdn.myanimelist.net/images/anime/9/75120.jpg);}
@@ -10604,11 +10604,11 @@ simple rule of add = #more {background-image: url();}
 #more32668 {background-image: url(http://cdn.myanimelist.net/images/anime/5/78406.jpg);}
 #more32566 {background-image: url(http://cdn.myanimelist.net/images/anime/6/78178.jpg);}
 #more31043 {background-image: url(http://cdn.myanimelist.net/images/anime/10/77957.jpg);}
-#more32887 {background-image: url(http://cdn.myanimelist.net/images/anime/6/78867.jpg);}
+#more32887 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/83318.jpg);}
 #more32801 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/81432.webp);}
 #more32915 {background-image: url(http://cdn.myanimelist.net/images/anime/2/78979.jpg);}
 #more32561 {background-image: url(http://cdn.myanimelist.net/images/anime/11/78160.jpg);}
-#more31109 {background-image: url(http://cdn.myanimelist.net/images/anime/3/74773.jpg);}
+#more31109 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/80182.jpg);}
 #more32215 {background-image: url(http://cdn.myanimelist.net/images/anime/7/77358.jpg);}
 #more32574 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/72321.webp);}
 #more31952 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/80171.webp);}
@@ -10629,9 +10629,9 @@ simple rule of add = #more {background-image: url();}
 #more31646 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/82898.webp);}
 #more32998 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/79160.webp);}
 #more33506 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82644.webp);}
-#more33729 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/81111.webp);}
-#more33730 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/81112.webp);}
-#more33728 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82495.webp);}
+#more33729 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83105l.jpg);}
+#more33730 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83828l.jpg);}
+#more33728 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/81110l.jpg);}
 #more33771 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/81891.webp);}
 #more34208 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82344.webp);}
 #more33203 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/79814.webp);}
@@ -10647,7 +10647,7 @@ simple rule of add = #more {background-image: url();}
 #more32949 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/82926.webp);}
 #more32900 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82194.webp);}
 #more33487 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/80599.webp);}
-#more32698 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/78489.webp);}
+#more32698 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83661.jpg);}
 #more33724 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83109.webp);}
 #more33674 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/80988.webp);}
 #more32962 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/81186.webp);}
@@ -10663,7 +10663,7 @@ simple rule of add = #more {background-image: url();}
 #more33286 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/81413.webp);}
 #more33036 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/82537.webp);}
 #more33018 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79229.webp);}
-#more34019 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/81909.webp);}
+#more34019 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82931.jpg);}
 #more33352 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/80143.webp);}
 #more33161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79651.webp);}
 #more34176 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82428.webp);}
@@ -10700,7 +10700,7 @@ simple rule of add = #more {background-image: url();}
 #more30911 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79271.webp);}
 #more33475 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83443.webp);}
 #more32407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83460.webp);}
-#more34547 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83334.webp);}
+#more34547 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83491.jpg);}
 #more34618 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83517.webp);}
 #more34403 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/82895.webp);}
 #more34636 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83564.webp);}
