--- a/Anime.css
+++ b/Anime.css
@@ -10636,7 +10636,7 @@ simple rule of add = #more {background-image: url();}
 #more34208 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82344.webp);}
 #more33203 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/79814.webp);}
 #more32948 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79047.webp);}
-#more33743 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82867.webp);}
+#more33743 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83735l.jpg);}
 #more33012 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79221.webp);}
 #more32281 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79999.webp);}
 #more31798 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/78466.webp);}
@@ -10644,7 +10644,7 @@ simple rule of add = #more {background-image: url();}
 #more32380 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/80582.webp);}
 #more33263 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/81588.webp);}
 #more32869 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82691.webp);}
-#more32949 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/82926.webp);}
+#more32949 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/83937l.jpg);}
 #more32900 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82194.webp);}
 #more33487 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/80599.webp);}
 #more32698 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83661.jpg);}
@@ -10706,6 +10706,6 @@ simple rule of add = #more {background-image: url();}
 #more34636 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83564.webp);}
 #more32494 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/80690.webp);}
 #more32902 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/78932.webp);}
-
-
+#more32979 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/82292l.jpg);}
+#more34620 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83540l.jpg);}
 
