--- a/Anime.css
+++ b/Anime.css
@@ -1493,7 +1493,7 @@ simple rule of add = #more {background-image: url();}
 #more15911 {background-image: url(http://cdn.myanimelist.net/images/anime/12/48747.jpg);}
 #more15731 {background-image: url(http://cdn.myanimelist.net/images/anime/3/53895.jpg);}
 #more15611 {background-image: url(http://cdn.myanimelist.net/images/anime/3/44566.jpg);}
-#more13333 {background-image: url(http://cdn.myanimelist.net/images/anime/6/50423.jpg);}
+#more13333 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83575.jpg);}
 #more10507 {background-image: url(http://cdn.myanimelist.net/images/anime/2/48959.jpg);}
 #more10321 {background-image: url(http://cdn.myanimelist.net/images/anime/6/30248.jpg);}
 #more10189 {background-image: url(http://cdn.myanimelist.net/images/anime/7/63917.jpg);}
@@ -6543,7 +6543,7 @@ simple rule of add = #more {background-image: url();}
 #more3430 {background-image: url(http://cdn.myanimelist.net/images/anime/11/5599.jpg);}
 #more2574 {background-image: url(http://cdn.myanimelist.net/images/anime/10/23505.jpg);}
 #more1790 {background-image: url(http://cdn.myanimelist.net/images/anime/11/3401.jpg);}
-#more1692 {background-image: url(http://cdn.myanimelist.net/images/anime/8/75132l.jpg);}
+#more1692 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/75131.jpg);}
 #more1664 {background-image: url(http://cdn.myanimelist.net/images/anime/1/1664.jpg);}
 #more1386 {background-image: url(http://cdn.myanimelist.net/images/anime/5/22139.jpg);}
 #more24321 {background-image: url(http://cdn.myanimelist.net/images/anime/9/62885.jpg);}
@@ -10692,7 +10692,7 @@ simple rule of add = #more {background-image: url();}
 #more33208 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79799.webp);}
 #more34522 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83247.webp);}
 #more33581 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/83172.webp);}
-#more34126 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83291.webp);}
+#more34126 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83930.jpg);}
 #more34240 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82388.webp);}
 #more34580 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/83409.webp);}
 #more34561 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/83599.webp);}
@@ -10708,4 +10708,6 @@ simple rule of add = #more {background-image: url();}
 #more32902 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/78932.webp);}
 #more32979 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/82292l.jpg);}
 #more34620 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83540l.jpg);}
+#more31500 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/80556.jpg);}
+
 
