--- a/Manga.css
+++ b/Manga.css
@@ -141,7 +141,7 @@ Manga Tumbnail
 #more15578 {background-image: url(http://cdn.myanimelist.net/images/manga/1/51389.jpg);}
 #more51 {background-image: url(http://cdn.myanimelist.net/images/manga/2/54937.jpg);}
 #more149 {background-image: url(http://cdn.myanimelist.net/images/manga/1/57043.jpg);}
-#more348 {background-image: url(http://cdn.myanimelist.net/images/manga/2/50617.jpg);}
+#more348 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/161681.jpg);}
 #more1412 {background-image: url(http://cdn.myanimelist.net/images/manga/2/11112.jpg);}
 #more3468 {background-image: url(http://cdn.myanimelist.net/images/manga/3/53493.jpg);}
 #more3048 {background-image: url(http://cdn.myanimelist.net/images/manga/2/50745.jpg);}
@@ -190,8 +190,8 @@ Manga Tumbnail
 #more21419 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/178011.webp);}
 #more14236 {background-image: url(http://cdn.myanimelist.net/images/manga/1/40027.jpg);}
 #more401 {background-image: url(http://cdn.myanimelist.net/images/manga/1/56649.jpg);}
-#more768 {background-image: url(http://cdn.myanimelist.net/images/manga/5/55511.jpg);}
-#more10552 {background-image: url(http://cdn.myanimelist.net/images/manga/2/56431.jpg);}
+#more768 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/145619.jpg);}
+#more10552 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/56421.jpg);}
 #more418 {background-image: url(http://cdn.myanimelist.net/images/manga/2/4560.jpg);}
 #more1456 {background-image: url(http://cdn.myanimelist.net/images/manga/1/22109.jpg);}
 #more20593 {background-image: url(http://cdn.myanimelist.net/images/manga/3/62199.jpg);}
@@ -218,7 +218,7 @@ Manga Tumbnail
 #more1721 {background-image: url(http://cdn.myanimelist.net/images/manga/3/30490.jpg);}
 #more4368 {background-image: url(http://cdn.myanimelist.net/images/manga/2/52805.jpg);}
 #more877 {background-image: url(http://cdn.myanimelist.net/images/manga/1/67823.jpg);}
-#more24705 {background-image: url(http://cdn.myanimelist.net/images/manga/2/57503.jpg);}
+#more24705 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/188918.jpg);}
 #more419 {background-image: url(http://cdn.myanimelist.net/images/manga/2/18561.jpg);}
 #more572 {background-image: url(http://cdn.myanimelist.net/images/manga/2/56681.jpg);}
 #more99 {background-image: url(http://cdn.myanimelist.net/images/manga/5/9182.jpg);}
@@ -405,7 +405,7 @@ Manga Tumbnail
 #more1506 {background-image: url(http://cdn.myanimelist.net/images/manga/2/9931.jpg);}
 #more7142 {background-image: url(http://cdn.myanimelist.net/images/manga/3/36415.jpg);}
 #more397 {background-image: url(http://cdn.myanimelist.net/images/manga/1/5104.jpg);}
-#more649 {background-image: url(http://cdn.myanimelist.net/images/manga/3/5180.jpg);}
+#more649 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/160923.jpg);}
 #more1009 {background-image: url(http://cdn.myanimelist.net/images/manga/2/20277.jpg);}
 #more1345 {background-image: url(http://cdn.myanimelist.net/images/manga/3/52545.jpg);}
 #more421 {background-image: url(http://cdn.myanimelist.net/images/manga/2/54069.jpg);}
@@ -468,7 +468,7 @@ Manga Tumbnail
 #more12064 {background-image: url(http://cdn.myanimelist.net/images/manga/3/52639.jpg);}
 #more75 {background-image: url(http://cdn.myanimelist.net/images/manga/1/54923.jpg);}
 #more7775 {background-image: url(http://cdn.myanimelist.net/images/manga/1/77569.jpg);}
-#more46282 {background-image: url(http://cdn.myanimelist.net/images/manga/3/81682.jpg);}
+#more46282 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/4/155148l.jpg);}
 #more173 {background-image: url(http://cdn.myanimelist.net/images/manga/3/852.jpg);}
 #more684 {background-image: url(http://cdn.myanimelist.net/images/manga/1/92347.jpg);}
 #more3924 {background-image: url(http://cdn.myanimelist.net/images/manga/5/19202.jpg);}
@@ -704,7 +704,7 @@ Manga Tumbnail
 #more16657 {background-image: url(http://cdn.myanimelist.net/images/manga/2/24612.jpg);}
 #more1045 {background-image: url(http://cdn.myanimelist.net/images/manga/1/640.jpg);}
 #more16572 {background-image: url(http://cdn.myanimelist.net/images/manga/1/97165.jpg);}
-#more27231 {background-image: url(http://cdn.myanimelist.net/images/manga/1/63891.jpg);}
+#more27231 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/63891.jpg);}
 #more11803 {background-image: url(http://cdn.myanimelist.net/images/manga/3/82286.jpg);}
 #more14902 {background-image: url(http://cdn.myanimelist.net/images/manga/5/57687.jpg);}
 #more19358 {background-image: url(http://cdn.myanimelist.net/images/manga/1/62231.jpg);}
@@ -1254,7 +1254,7 @@ Manga Tumbnail
 #more7763 {background-image: url(http://cdn.myanimelist.net/images/manga/5/15901.jpg);}
 #more26945 {background-image: url(http://cdn.myanimelist.net/images/manga/4/70807.jpg);}
 #more9271 {background-image: url(http://cdn.myanimelist.net/images/manga/1/15811.jpg);}
-#more28226 {background-image: url(http://cdn.myanimelist.net/images/manga/2/49083.jpg);}
+#more28226 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/159423.jpg);}
 #more10946 {background-image: url(http://cdn.myanimelist.net/images/manga/3/35520.jpg);}
 #more906 {background-image: url(http://cdn.myanimelist.net/images/manga/1/32838.jpg);}
 #more333 {background-image: url(http://cdn.myanimelist.net/images/manga/1/524.jpg);}
@@ -2042,7 +2042,7 @@ Manga Tumbnail
 #more3621 {background-image: url(http://cdn.myanimelist.net/images/manga/4/82372.jpg);}
 #more8889 {background-image: url(http://cdn.myanimelist.net/images/manga/2/46257.jpg);}
 #more135 {background-image: url(http://cdn.myanimelist.net/images/manga/1/33509.jpg);}
-#more35171 {background-image: url(http://cdn.myanimelist.net/images/manga/2/63873.jpg);}
+#more35171 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/104251.jpg);}
 #more3248 {background-image: url(http://cdn.myanimelist.net/images/manga/1/3566.jpg);}
 #more15396 {background-image: url(http://cdn.myanimelist.net/images/manga/4/94609.jpg);}
 #more34127 {background-image: url(http://cdn.myanimelist.net/images/manga/1/62151.jpg);}
@@ -17934,7 +17934,7 @@ Manga Tumbnail
 #more31441 {background-image: url(http://cdn.myanimelist.net/images/manga/2/57863.jpg);}
 #more15828 {background-image: url(http://cdn.myanimelist.net/images/manga/1/23067.jpg);}
 #more42967 {background-image: url(http://cdn.myanimelist.net/images/manga/3/75687.jpg);}
-#more48347 {background-image: url(http://cdn.myanimelist.net/images/manga/2/89743.jpg);}
+#more48347 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/186664.jpg);}
 #more46044 {background-image: url(http://cdn.myanimelist.net/images/manga/3/81378.jpg);}
 #more24543 {background-image: url(http://cdn.myanimelist.net/images/manga/1/39527.jpg);}
 #more21985 {background-image: url(http://cdn.myanimelist.net/images/manga/3/35688.jpg);}
@@ -24960,12 +24960,12 @@ Manga Tumbnail
 #more93322 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/178146.webp);}
 #more74339 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/151905.webp);}
 #more73571 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/159136.webp);}
-
-
-
-
-
-
+#more62887 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/128447.jpg);}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
 
 
 
