--- a/Manga.css
+++ b/Manga.css
@@ -53,15 +53,15 @@ Manga Tumbnail
 #more71 {background-image: url(http://cdn.myanimelist.net/images/manga/1/30554.jpg);}
 #more676 {background-image: url(http://cdn.myanimelist.net/images/manga/1/32468.jpg);}
 #more28 {background-image: url(http://cdn.myanimelist.net/images/manga/3/97991.jpg);}
-#more3 {background-image: url(http://cdn.myanimelist.net/images/manga/1/54437.jpg);}
+#more3 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/185858.jpg);}
 #more1162 {background-image: url(http://cdn.myanimelist.net/images/manga/2/55379.jpg);}
-#more1649 {background-image: url(http://cdn.myanimelist.net/images/manga/2/31329.jpg);}
+#more1649 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/149018.jpg);}
 #more11734 {background-image: url(http://cdn.myanimelist.net/images/manga/3/66993.jpg);}
 #more988 {background-image: url(http://cdn.myanimelist.net/images/manga/3/25585.jpg);}
 #more50 {background-image: url(http://cdn.myanimelist.net/images/manga/1/57607.jpg);}
 #more13463 {background-image: url(http://cdn.myanimelist.net/images/manga/1/26788.jpg);}
 #more106 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6415.jpg);}
-#more8483 {background-image: url(http://cdn.myanimelist.net/images/manga/1/51835.jpg);}
+#more8483 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/115221.jpg);}
 #more11767 {background-image: url(http://cdn.myanimelist.net/images/manga/4/68191.jpg);}
 #more671 {background-image: url(http://cdn.myanimelist.net/images/manga/3/63339.jpg);}
 #more3403 {background-image: url(http://cdn.myanimelist.net/images/manga/2/54789.jpg);}
@@ -76,7 +76,7 @@ Manga Tumbnail
 #more142 {background-image: url(http://cdn.myanimelist.net/images/manga/1/53387.jpg);}
 #more101 {background-image: url(http://cdn.myanimelist.net/images/manga/1/29292.jpg);}
 #more1271 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6702.jpg);}
-#more436 {background-image: url(http://cdn.myanimelist.net/images/manga/1/12305.jpg);}
+#more436 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/4/38133.jpg);}
 #more43 {background-image: url(http://cdn.myanimelist.net/images/manga/3/35650.jpg);}
 #more3537 {background-image: url(http://cdn.myanimelist.net/images/manga/1/47941.jpg);}
 #more8 {background-image: url(http://cdn.myanimelist.net/images/manga/5/34037.jpg);}
@@ -94,7 +94,7 @@ Manga Tumbnail
 #more23 {background-image: url(http://cdn.myanimelist.net/images/manga/1/5616.jpg);}
 #more90 {background-image: url(http://cdn.myanimelist.net/images/manga/5/14745.jpg);}
 #more13949 {background-image: url(http://cdn.myanimelist.net/images/manga/3/27687.jpg);}
-#more3872 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6311.jpg);}
+#more3872 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/5/111965.jpg);}
 #more44 {background-image: url(http://cdn.myanimelist.net/images/manga/4/21132.jpg);}
 #more31499 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/181212.webp);}
 #more14790 {background-image: url(http://cdn.myanimelist.net/images/manga/2/98589.jpg);}
@@ -108,7 +108,7 @@ Manga Tumbnail
 #more8157 {background-image: url(http://cdn.myanimelist.net/images/manga/2/31836.jpg);}
 #more14710 {background-image: url(http://cdn.myanimelist.net/images/manga/3/55905.jpg);}
 #more11516 {background-image: url(http://cdn.myanimelist.net/images/manga/4/30661.jpg);}
-#more430 {background-image: url(http://cdn.myanimelist.net/images/manga/1/55807.jpg);}
+#more430 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/184775.jpg);}
 #more13702 {background-image: url(http://cdn.myanimelist.net/images/manga/1/59209.jpg);}
 #more7378 {background-image: url(http://cdn.myanimelist.net/images/manga/2/32966.jpg);}
 #more13748 {background-image: url(http://cdn.myanimelist.net/images/manga/4/19478.jpg);}
@@ -150,7 +150,7 @@ Manga Tumbnail
 #more13001 {background-image: url(http://cdn.myanimelist.net/images/manga/3/20937.jpg);}
 #more633 {background-image: url(http://cdn.myanimelist.net/images/manga/2/9226.jpg);}
 #more1802 {background-image: url(http://cdn.myanimelist.net/images/manga/2/37098.jpg);}
-#more4632 {background-image: url(http://cdn.myanimelist.net/images/manga/2/28066.jpg);}
+#more4632 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/164420.jpg);}
 #more10960 {background-image: url(http://cdn.myanimelist.net/images/manga/1/19679.jpg);}
 #more92 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6601.jpg);}
 #more443 {background-image: url(http://cdn.myanimelist.net/images/manga/1/491.jpg);}
@@ -209,7 +209,7 @@ Manga Tumbnail
 #more5994 {background-image: url(http://cdn.myanimelist.net/images/manga/2/50743.jpg);}
 #more27 {background-image: url(http://cdn.myanimelist.net/images/manga/1/9385.jpg);}
 #more117 {background-image: url(http://cdn.myanimelist.net/images/manga/3/3117.jpg);}
-#more11896 {background-image: url(http://cdn.myanimelist.net/images/manga/3/73219.jpg);}
+#more11896 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/4/161802.jpg);}
 #more646 {background-image: url(http://cdn.myanimelist.net/images/manga/4/6433.jpg);}
 #more44347 {background-image: url(http://cdn.myanimelist.net/images/manga/3/80661.jpg);}
 #more838 {background-image: url(http://cdn.myanimelist.net/images/manga/1/54397.jpg);}
@@ -341,7 +341,7 @@ Manga Tumbnail
 #more3033 {background-image: url(http://cdn.myanimelist.net/images/manga/3/52449.jpg);}
 #more1250 {background-image: url(http://cdn.myanimelist.net/images/manga/2/1007.jpg);}
 #more982 {background-image: url(http://cdn.myanimelist.net/images/manga/1/53695.jpg);}
-#more674 {background-image: url(http://cdn.myanimelist.net/images/manga/3/80457.jpg);}
+#more674 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/186638.jpg);}
 #more14049 {background-image: url(http://cdn.myanimelist.net/images/manga/1/37227.jpg);}
 #more80 {background-image: url(http://cdn.myanimelist.net/images/manga/2/14749.jpg);}
 #more39 {background-image: url(http://cdn.myanimelist.net/images/manga/2/5130.jpg);}
@@ -381,7 +381,7 @@ Manga Tumbnail
 #more136 {background-image: url(http://cdn.myanimelist.net/images/manga/3/147.jpg);}
 #more36213 {background-image: url(http://cdn.myanimelist.net/images/manga/3/66791.jpg);}
 #more1288 {background-image: url(http://cdn.myanimelist.net/images/manga/3/11091.jpg);}
-#more26736 {background-image: url(http://cdn.myanimelist.net/images/manga/3/59185.jpg);}
+#more26736 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/149086.jpg);}
 #more1202 {background-image: url(http://cdn.myanimelist.net/images/manga/3/9924.jpg);}
 #more893 {background-image: url(http://cdn.myanimelist.net/images/manga/2/20512.jpg);}
 #more2653 {background-image: url(http://cdn.myanimelist.net/images/manga/2/41071.jpg);}
@@ -437,7 +437,7 @@ Manga Tumbnail
 #more3140 {background-image: url(http://cdn.myanimelist.net/images/manga/3/9661.jpg);}
 #more998 {background-image: url(http://cdn.myanimelist.net/images/manga/2/9630.jpg);}
 #more965 {background-image: url(http://cdn.myanimelist.net/images/manga/4/12292.jpg);}
-#more14440 {background-image: url(http://cdn.myanimelist.net/images/manga/1/52703.jpg);}
+#more14440 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/121183.jpg);}
 #more97 {background-image: url(http://cdn.myanimelist.net/images/manga/2/540.jpg);}
 #more1547 {background-image: url(http://cdn.myanimelist.net/images/manga/3/6190.jpg);}
 #more747 {background-image: url(http://cdn.myanimelist.net/images/manga/1/54713.jpg);}
@@ -515,7 +515,7 @@ Manga Tumbnail
 #more755 {background-image: url(http://cdn.myanimelist.net/images/manga/4/24094.jpg);}
 #more3446 {background-image: url(http://cdn.myanimelist.net/images/manga/5/15785.jpg);}
 #more25297 {background-image: url(http://cdn.myanimelist.net/images/manga/3/54811.jpg);}
-#more3749 {background-image: url(http://cdn.myanimelist.net/images/manga/3/34754.jpg);}
+#more3749 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/21235.jpg);}
 #more1076 {background-image: url(http://cdn.myanimelist.net/images/manga/3/2070.jpg);}
 #more277 {background-image: url(http://cdn.myanimelist.net/images/manga/3/10201.jpg);}
 #more820 {background-image: url(http://cdn.myanimelist.net/images/manga/3/217.jpg);}
@@ -626,7 +626,7 @@ Manga Tumbnail
 #more3614 {background-image: url(http://cdn.myanimelist.net/images/manga/4/63643.jpg);}
 #more39625 {background-image: url(http://cdn.myanimelist.net/images/manga/4/80405.jpg);}
 #more932 {background-image: url(http://cdn.myanimelist.net/images/manga/2/13155.jpg);}
-#more657 {background-image: url(http://cdn.myanimelist.net/images/manga/1/96117.jpg);}
+#more657 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/115969.jpg);}
 #more10657 {background-image: url(http://cdn.myanimelist.net/images/manga/1/18744.jpg);}
 #more28697 {background-image: url(http://cdn.myanimelist.net/images/manga/3/65913.jpg);}
 #more15490 {background-image: url(http://cdn.myanimelist.net/images/manga/1/22531.jpg);}
@@ -808,7 +808,7 @@ Manga Tumbnail
 #more2060 {background-image: url(http://cdn.myanimelist.net/images/manga/5/77129.jpg);}
 #more1595 {background-image: url(http://cdn.myanimelist.net/images/manga/2/1577.jpg);}
 #more18270 {background-image: url(http://cdn.myanimelist.net/images/manga/2/39711.jpg);}
-#more544 {background-image: url(http://cdn.myanimelist.net/images/manga/2/13783.jpg);}
+#more544 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/89003.jpg);}
 #more2893 {background-image: url(http://cdn.myanimelist.net/images/manga/2/14597.jpg);}
 #more912 {background-image: url(http://cdn.myanimelist.net/images/manga/3/296.jpg);}
 #more375 {background-image: url(http://cdn.myanimelist.net/images/manga/5/737.jpg);}
@@ -917,7 +917,7 @@ Manga Tumbnail
 #more12123 {background-image: url(http://cdn.myanimelist.net/images/manga/3/16610.jpg);}
 #more1006 {background-image: url(http://cdn.myanimelist.net/images/manga/5/33698.jpg);}
 #more14073 {background-image: url(http://cdn.myanimelist.net/images/manga/2/20279.jpg);}
-#more339 {background-image: url(http://cdn.myanimelist.net/images/manga/3/5189.jpg);}
+#more339 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/157310.jpg);}
 #more26292 {background-image: url(http://cdn.myanimelist.net/images/manga/2/61771.jpg);}
 #more1265 {background-image: url(http://cdn.myanimelist.net/images/manga/1/35073.jpg);}
 #more796 {background-image: url(http://cdn.myanimelist.net/images/manga/2/193.jpg);}
@@ -1160,7 +1160,7 @@ Manga Tumbnail
 #more1430 {background-image: url(http://cdn.myanimelist.net/images/manga/1/1369.jpg);}
 #more655 {background-image: url(http://cdn.myanimelist.net/images/manga/4/9619.jpg);}
 #more28361 {background-image: url(http://cdn.myanimelist.net/images/manga/2/65719.jpg);}
-#more7010 {background-image: url(http://cdn.myanimelist.net/images/manga/5/71979.jpg);}
+#more7010 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/4/43279.jpg);}
 #more2222 {background-image: url(http://cdn.myanimelist.net/images/manga/1/5907.jpg);}
 #more13558 {background-image: url(http://cdn.myanimelist.net/images/manga/1/24591.jpg);}
 #more1964 {background-image: url(http://cdn.myanimelist.net/images/manga/1/40680.jpg);}
@@ -1226,7 +1226,7 @@ Manga Tumbnail
 #more23217 {background-image: url(http://cdn.myanimelist.net/images/manga/2/63929.jpg);}
 #more11329 {background-image: url(http://cdn.myanimelist.net/images/manga/1/15311.jpg);}
 #more3269 {background-image: url(http://cdn.myanimelist.net/images/manga/1/31103.jpg);}
-#more11327 {background-image: url(http://cdn.myanimelist.net/images/manga/5/31625.jpg);}
+#more11327 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/169329.jpg);}
 #more1302 {background-image: url(http://cdn.myanimelist.net/images/manga/2/56931.jpg);}
 #more23717 {background-image: url(http://cdn.myanimelist.net/images/manga/1/74249.jpg);}
 #more21621 {background-image: url(http://cdn.myanimelist.net/images/manga/2/62477.jpg);}
@@ -1733,7 +1733,7 @@ Manga Tumbnail
 #more45771 {background-image: url(http://cdn.myanimelist.net/images/manga/3/81203.jpg);}
 #more11112 {background-image: url(http://cdn.myanimelist.net/images/manga/3/15016.jpg);}
 #more977 {background-image: url(http://cdn.myanimelist.net/images/manga/5/26438.jpg);}
-#more442 {background-image: url(http://cdn.myanimelist.net/images/manga/2/82110.jpg);}
+#more442 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/151420.jpg);}
 #more6808 {background-image: url(http://cdn.myanimelist.net/images/manga/3/9246.jpg);}
 #more14379 {background-image: url(http://cdn.myanimelist.net/images/manga/2/20547.jpg);}
 #more10386 {background-image: url(http://cdn.myanimelist.net/images/manga/3/20616.jpg);}
@@ -5851,7 +5851,7 @@ Manga Tumbnail
 #more13233 {background-image: url(http://cdn.myanimelist.net/images/manga/2/18474.jpg);}
 #more20157 {background-image: url(http://cdn.myanimelist.net/images/manga/5/45181.jpg);}
 #more1792 {background-image: url(http://cdn.myanimelist.net/images/manga/3/1919.jpg);}
-#more51493 {background-image: url(http://cdn.myanimelist.net/images/manga/1/91577.jpg);}
+#more51493 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/130549.jpg);}
 #more2620 {background-image: url(http://cdn.myanimelist.net/images/manga/3/2815.jpg);}
 #more11587 {background-image: url(http://cdn.myanimelist.net/images/manga/3/15680.jpg);}
 #more21323 {background-image: url(http://cdn.myanimelist.net/images/manga/3/34339.jpg);}
@@ -12209,7 +12209,7 @@ Manga Tumbnail
 #more49989 {background-image: url(http://cdn.myanimelist.net/images/manga/3/88187.jpg);}
 #more38727 {background-image: url(http://cdn.myanimelist.net/images/manga/2/69101.jpg);}
 #more17225 {background-image: url(http://cdn.myanimelist.net/images/manga/3/25873.jpg);}
-#more45143 {background-image: url(http://cdn.myanimelist.net/images/manga/2/79709.jpg);}
+#more45143 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/116653.jpg);}
 #more26203 {background-image: url(http://cdn.myanimelist.net/images/manga/3/42100.jpg);}
 #more21597 {background-image: url(http://cdn.myanimelist.net/images/manga/2/34958.jpg);}
 #more16227 {background-image: url(http://cdn.myanimelist.net/images/manga/2/30211.jpg);}
