--- a/Anime.css
+++ b/Anime.css
@@ -219,7 +219,7 @@ simple rule of add = #more {background-image: url();}
 #more1257 {background-image: url(http://cdn.myanimelist.net/images/anime/6/16343.jpg);}
 #more265 {background-image: url(http://cdn.myanimelist.net/images/anime/4/64737.jpg);}
 #more22507 {background-image: url(http://cdn.myanimelist.net/images/anime/3/64833.jpg);}
-#more17265 {background-image: url(http://cdn.myanimelist.net/images/anime/6/60613.jpg);}
+#more17265 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/84004.jpg);}
 #more12477 {background-image: url(http://cdn.myanimelist.net/images/anime/12/52415.jpg);}
 #more7720 {background-image: url(http://cdn.myanimelist.net/images/anime/10/18671.jpg);}
 #more6045 {background-image: url(http://cdn.myanimelist.net/images/anime/7/17890.jpg);}
@@ -10709,5 +10709,7 @@ simple rule of add = #more {background-image: url();}
 #more32979 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/82292l.jpg);}
 #more34620 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83540l.jpg);}
 #more31500 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/80556.jpg);}
-
+#more34658 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83611.jpg);}
+#more34712 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83689.jpg);}
+#more34933 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/84316.jpg);}
 
