--- a/Anime.css
+++ b/Anime.css
@@ -10712,4 +10712,7 @@ simple rule of add = #more {background-image: url();}
 #more34658 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83611.jpg);}
 #more34712 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83689.jpg);}
 #more34933 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/84316.jpg);}
+#more33731 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/82590l.jpg);}
+#more31980 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/78265l.jpg);}
+#more32603 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82409l.jpg);}
 
