--- a/Anime.css
+++ b/Anime.css
@@ -10715,4 +10715,4 @@ simple rule of add = #more {background-image: url();}
 #more33731 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/82590l.jpg);}
 #more31980 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/78265l.jpg);}
 #more32603 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82409l.jpg);}
-
+#more34934 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/84339.jpg);}
